...
        android:id="@+id/layout_received_invitation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ListView
        android:id="@+id/invitationList"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonAccept"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAccept"/>

    <Button
...
