...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.teams.TeamActivity">

    <Button
        android:id="@+id/btn_team_activity_pending_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_invites"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_no_teammates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_teammates_in_team"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/title_teammates"
...
